# blue-pill-clock

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
